[QOL-7992] replace percent symbol as newer markupsafe chokes on it

--- a/ckanext/archiver/i18n/pl/LC_MESSAGES/ckanext-archiver.po
+++ b/ckanext/archiver/i18n/pl/LC_MESSAGES/ckanext-archiver.po
@@ -187,6 +187,9 @@ msgstr "Zbiory z błędnymi linkami"
 msgid "% Broken links"
 msgstr "% błędnych linków"
 
+msgid "Percent broken"
+msgstr "% błędnych linków"
+
 #: ckanext/archiver/templates/report/broken_links.html:45
 msgid "Index/position of the resource in the dataset"
 msgstr "Pozycja zasobu w zbiorze"
